src/tests/snapshots/scl__tests__parse_expr@operator_precedence.scl.snap
---
source: src/tests/mod.rs
expression: expr
input_file: src/tests/sources/parse_expr/operator_precedence.scl
---
Expr {
    span: SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: 18,
    },
    kind: BinOp {
        lhs: Expr {
            span: SourceSpan {
                offset: SourceOffset(
                    0,
                ),
                length: 10,
            },
            kind: BinOp {
                lhs: Expr {
                    span: SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: 1,
                    },
                    kind: Number(
                        "5",
                    ),
                },
                op: Add,
                rhs: Expr {
                    span: SourceSpan {
                        offset: SourceOffset(
                            4,
                        ),
                        length: 6,
                    },
                    kind: BinOp {
                        lhs: Expr {
                            span: SourceSpan {
                                offset: SourceOffset(
                                    4,
                                ),
                                length: 1,
                            },
                            kind: Number(
                                "3",
                            ),
                        },
                        op: Multiply,
                        rhs: Expr {
                            span: SourceSpan {
                                offset: SourceOffset(
                                    8,
                                ),
                                length: 2,
                            },
                            kind: Number(
                                "10",
                            ),
                        },
                    },
                },
            },
        },
        op: Subtract,
        rhs: Expr {
            span: SourceSpan {
                offset: SourceOffset(
                    13,
                ),
                length: 5,
            },
            kind: BinOp {
                lhs: Expr {
                    span: SourceSpan {
                        offset: SourceOffset(
                            13,
                        ),
                        length: 1,
                    },
                    kind: Number(
                        "5",
                    ),
                },
                op: Divide,
                rhs: Expr {
                    span: SourceSpan {
                        offset: SourceOffset(
                            17,
                        ),
                        length: 1,
                    },
                    kind: Number(
                        "2",
                    ),
                },
            },
        },
    },
}
