src/tests/snapshots/scl__tests__runtime@address_of.scl.snap
---
source: src/tests/mod.rs
expression: checked_main_package
input_file: src/tests/sources/runtime/address_of.scl
---
CheckedPackage {
    package_id: ModuleId(
        3,
    ),
    units: [
        CheckedTranslationUnit {
            procs: [
                CheckedProc {
                    name: "main",
                    type_id: TypeId(
                        9,
                    ),
                    body: CheckedBlock {
                        stmts: [
                            VariableDeclaration {
                                stack_slot: StackSlotId(
                                    0,
                                ),
                                value: CheckedExpr {
                                    type_id: TypeId(
                                        2,
                                    ),
                                    lvalue: false,
                                    kind: Number(
                                        10,
                                    ),
                                },
                            },
                            VariableDeclaration {
                                stack_slot: StackSlotId(
                                    1,
                                ),
                                value: CheckedExpr {
                                    type_id: TypeId(
                                        10,
                                    ),
                                    lvalue: false,
                                    kind: AddressOf {
                                        expr: CheckedExpr {
                                            type_id: TypeId(
                                                2,
                                            ),
                                            lvalue: true,
                                            kind: StackValue(
                                                StackSlotId(
                                                    0,
                                                ),
                                            ),
                                        },
                                    },
                                },
                            },
                            Expr(
                                CheckedExpr {
                                    type_id: TypeId(
                                        3,
                                    ),
                                    lvalue: true,
                                    kind: DirectCall {
                                        name: "printf",
                                        params: [
                                            CheckedExpr {
                                                type_id: TypeId(
                                                    4,
                                                ),
                                                lvalue: false,
                                                kind: String(
                                                    "%d\\n",
                                                ),
                                            },
                                            CheckedExpr {
                                                type_id: TypeId(
                                                    1,
                                                ),
                                                lvalue: false,
                                                kind: BinOp {
                                                    lhs: CheckedExpr {
                                                        type_id: TypeId(
                                                            10,
                                                        ),
                                                        lvalue: false,
                                                        kind: AddressOf {
                                                            expr: CheckedExpr {
                                                                type_id: TypeId(
                                                                    2,
                                                                ),
                                                                lvalue: true,
                                                                kind: StackValue(
                                                                    StackSlotId(
                                                                        0,
                                                                    ),
                                                                ),
                                                            },
                                                        },
                                                    },
                                                    op: Equal,
                                                    rhs: CheckedExpr {
                                                        type_id: TypeId(
                                                            10,
                                                        ),
                                                        lvalue: true,
                                                        kind: StackValue(
                                                            StackSlotId(
                                                                1,
                                                            ),
                                                        ),
                                                    },
                                                },
                                            },
                                        ],
                                        variadic_after: Some(
                                            1,
                                        ),
                                        stack_slot: StackSlotId(
                                            2,
                                        ),
                                    },
                                },
                            ),
                            Expr(
                                CheckedExpr {
                                    type_id: TypeId(
                                        3,
                                    ),
                                    lvalue: true,
                                    kind: DirectCall {
                                        name: "printf",
                                        params: [
                                            CheckedExpr {
                                                type_id: TypeId(
                                                    4,
                                                ),
                                                lvalue: false,
                                                kind: String(
                                                    "%d\\n",
                                                ),
                                            },
                                            CheckedExpr {
                                                type_id: TypeId(
                                                    2,
                                                ),
                                                lvalue: true,
                                                kind: Deref {
                                                    type_id: TypeId(
                                                        10,
                                                    ),
                                                    expr: CheckedExpr {
                                                        type_id: TypeId(
                                                            10,
                                                        ),
                                                        lvalue: true,
                                                        kind: Store {
                                                            expr: CheckedExpr {
                                                                type_id: TypeId(
                                                                    10,
                                                                ),
                                                                lvalue: false,
                                                                kind: AddressOf {
                                                                    expr: CheckedExpr {
                                                                        type_id: TypeId(
                                                                            2,
                                                                        ),
                                                                        lvalue: true,
                                                                        kind: StackValue(
                                                                            StackSlotId(
                                                                                0,
                                                                            ),
                                                                        ),
                                                                    },
                                                                },
                                                            },
                                                            stack_slot: StackSlotId(
                                                                4,
                                                            ),
                                                        },
                                                    },
                                                    stack_slot: StackSlotId(
                                                        3,
                                                    ),
                                                },
                                            },
                                        ],
                                        variadic_after: Some(
                                            1,
                                        ),
                                        stack_slot: StackSlotId(
                                            5,
                                        ),
                                    },
                                },
                            ),
                            Expr(
                                CheckedExpr {
                                    type_id: TypeId(
                                        3,
                                    ),
                                    lvalue: true,
                                    kind: DirectCall {
                                        name: "printf",
                                        params: [
                                            CheckedExpr {
                                                type_id: TypeId(
                                                    4,
                                                ),
                                                lvalue: false,
                                                kind: String(
                                                    "%d\\n",
                                                ),
                                            },
                                            CheckedExpr {
                                                type_id: TypeId(
                                                    2,
                                                ),
                                                lvalue: true,
                                                kind: Deref {
                                                    type_id: TypeId(
                                                        10,
                                                    ),
                                                    expr: CheckedExpr {
                                                        type_id: TypeId(
                                                            10,
                                                        ),
                                                        lvalue: true,
                                                        kind: Store {
                                                            expr: CheckedExpr {
                                                                type_id: TypeId(
                                                                    10,
                                                                ),
                                                                lvalue: false,
                                                                kind: AddressOf {
                                                                    expr: CheckedExpr {
                                                                        type_id: TypeId(
                                                                            2,
                                                                        ),
                                                                        lvalue: true,
                                                                        kind: Store {
                                                                            expr: CheckedExpr {
                                                                                type_id: TypeId(
                                                                                    2,
                                                                                ),
                                                                                lvalue: false,
                                                                                kind: Number(
                                                                                    25,
                                                                                ),
                                                                            },
                                                                            stack_slot: StackSlotId(
                                                                                6,
                                                                            ),
                                                                        },
                                                                    },
                                                                },
                                                            },
                                                            stack_slot: StackSlotId(
                                                                8,
                                                            ),
                                                        },
                                                    },
                                                    stack_slot: StackSlotId(
                                                        7,
                                                    ),
                                                },
                                            },
                                        ],
                                        variadic_after: Some(
                                            1,
                                        ),
                                        stack_slot: StackSlotId(
                                            9,
                                        ),
                                    },
                                },
                            ),
                        ],
                        last: Some(
                            CheckedExpr {
                                type_id: TypeId(
                                    2,
                                ),
                                lvalue: false,
                                kind: Number(
                                    0,
                                ),
                            },
                        ),
                        type_id: TypeId(
                            2,
                        ),
                    },
                    params: [],
                    return_type: TypeId(
                        2,
                    ),
                    stack_slots: StackSlots {
                        slots: [
                            TypeId(
                                2,
                            ),
                            TypeId(
                                10,
                            ),
                            TypeId(
                                3,
                            ),
                            TypeId(
                                10,
                            ),
                            TypeId(
                                10,
                            ),
                            TypeId(
                                3,
                            ),
                            TypeId(
                                2,
                            ),
                            TypeId(
                                10,
                            ),
                            TypeId(
                                10,
                            ),
                            TypeId(
                                3,
                            ),
                        ],
                    },
                },
            ],
        },
    ],
}
